css/styles.css
/*#region Specific Types*/
a 
{
    text-decoration: none;
}

img {
    display: block;
    width: 100%;
    height: 100%;
}

span {
    color: #8892B0;
    font-size: 30px;
}

th, li {
    font-size: 30px;
    color: #8892B0;
}

ul {
    line-height: 70px;
    list-style-type: none;
    padding: 0
}

input{
    font-size: 20px;
}

button {
    background-color: #0A192F;
    border: 1;
    border-color: #64FFDA;
    padding: 15px 32px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    color: #64FFDA;
    font-size: 20px;
}

table, tr{
    border-spacing: 0px;
    padding: 0px;
}

td{
    align-content: center;
    align-items: center;
}

html, body{
    min-height: 100%;
}

body {
    background-color: #0A192F;
    padding-top: 60px;
    padding-bottom: 60px;
}
/*#endregion Specific Types*/

/*#region Ids*/



#navBarTitle {
    font-size: 36px;
    color: white;
}

#filler {
    vertical-align: middle;
    color: #8892B0;
    font-size: 40px;
}
/*#endregion Ids*/

/*#region Classes*/
.section {
    width: 100%;
    text-align: center;
    background-color: #0A192F;
    padding: 5px;
    border-spacing: 0px;
    padding-top: 60px;
    padding-bottom: 60px;
}

.sectionTitle {
    vertical-align: middle;
    color: #CCD6F6;
    font-size: 40px;
    text-align: center;
}

.edgeDivider {
    height: 5px;
    background-color: #2F3680;
}

.sectionDivider {
    height: 5px;
    background-color: #64FFDA;
}

.header {
    border: 0px;
    width: 100%;
    background-color: #0A192F;
    padding: 15px;
    border-spacing: 0px;
}

.footer {
    font-size: 20px;
    color: #CCD6F6;
    padding: 0px;
    border-spacing: 0px;
    border: 0px;
    width: 100%;
    background-color: #0A192F;
}

.staticTop {
    position: fixed;
    top: 0;
}

.staticBottom {
    position: fixed;
    bottom: 0;
}

.navBarOptions {
    font-size: 30px;
    color: #8892B0;
}

.navBarOptions:hover{
    color: white;
}

.navigation {
    background-color: #0A192F;
    width: 5%;
    height: 85%;
    border-spacing: 0px;
    vertical-align: middle;
    text-align: center;
    color: #64FFDA;
    font-size: 30px;
    position: fixed;
}

.contentCenter {
    background-color: #0A192F;
    padding: 0px;
    padding-left: 2px;
    padding-right: 2px;
}

.hide{
    visibility: collapse;
}

.show {
    visibility: visible;
}

/*#endregion Classes*/


.titleOverlay {
    position: absolute;
    z-index: 100;
    vertical-align: middle;
    color: #CCD6F6;
    font-size: 60px;
    text-align: center;
    width: 100%
}

